Fix: Search bar clear icon not visible
Ref: #72

--- a/src/components/primary/toolbar/_search.scss
+++ b/src/components/primary/toolbar/_search.scss
@@ -32,8 +32,8 @@
         border-color: var(--accent);
     }
 
-    .search-2oPWTC.open-6_Y_aH .search-bar-icon,
-    .search-2oPWTC.focused-31_ccS .search-bar-icon,
+    .search-2oPWTC.open-6_Y_aH .searchBarIcon-1J6sKG,
+    .search-2oPWTC.focused-31_ccS .searchBarIcon-1J6sKG,
     .search-2oPWTC.open-6_Y_aH .searchBar-3dMhjb .public-DraftEditorPlaceholder-root,
     .search-2oPWTC.focused-31_ccS .searchBar-3dMhjb .public-DraftEditorPlaceholder-root{
         display: block;
